# Raytracer_SS17

./: .gitignore
diagramme/: Klassendiagramm.mdj  Klassendiagramm2.mdj
doc/: DieSzene.txt  animation.txt  material.txt  szene.txt  szene1.txt  szene2.txt
doc/PPM_Images/: image1.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  image8.ppm  image9.ppm
doc/TXT_Scenes/: framework1.txt  framework10.txt  framework2.txt  framework3.txt  framework4.txt  framework5.txt  framework6.txt  framework7.txt  framework8.txt  framework9.txt
framework/: SDFloader.cpp  SDFloader.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  color.hpp  composite.cpp  composite.hpp  light.hpp  material.hpp  material.txt  optionalHit.hpp  pixel.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
source/: CMakeLists.txt  animation.cpp  fileGenerator.cpp  raytracer.cpp  tests.cpp
